<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:background="@drawable/blue_gradient"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Acá los elementos de mi formulario -->


    <TextView
        android:id="@+id/txt_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:gravity="center"
        android:text="@string/texto_ec"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/txt_correo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="140dp"
        android:clickable="true"
        android:focusable="false"
        android:inputType="none"
        android:text="@string/texto_correo"
        android:textColor="@color/white"
        android:textIsSelectable="false"
        android:textSize="17dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btInicioCorreo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/input_background"
        android:drawableLeft="@drawable/ic_home_24"
        android:text="INICIO "
        android:textColor="@color/black"
        android:textStyle="normal"
        app:backgroundTint="@color/material_on_surface_stroke"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/caja_correo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:clickable="false"
        android:text="proyectoalmansamaneiros@gmail.com"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txt_correo"
        app:layout_constraintTop_toBottomOf="@+id/txt_correo" />

    <TextView
        android:id="@+id/txt_asunto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:text="@string/texto_asunto"
        android:textColor="@color/white"
        android:textSize="17dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caja_correo" />

    <EditText
        android:id="@+id/caja_asunto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:hint="Indicar motivo consulta/incidencia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/txt_asunto"
        app:layout_constraintTop_toBottomOf="@+id/txt_asunto" />

    <TextView
        android:id="@+id/txt_mensaje"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/texto_mensaje"
        android:textColor="@color/white"
        android:textSize="17dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caja_asunto" />

    <EditText
        android:id="@+id/caja_mensaje"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:height="100dp"
        android:hint="Descripción de la consulta/incidencia"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txt_mensaje"
        app:layout_constraintTop_toBottomOf="@+id/txt_mensaje" />

    <Button
        android:id="@+id/btn_enviar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/input_background"
        android:drawableLeft="@drawable/ic_email"
        android:text="@string/texto_btn_enviar"
        android:textColor="@color/black"
        app:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvMotivos"
        android:layout_width="330dp"
        android:layout_height="75dp"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:justificationMode="inter_word"
        android:text="Por favor, para resolver cualquier tipo de incidencia, o duda administraqtiva, como baja o modificación de usuario, indiquelo a continuación y le responderemos a la mayor brevedad posible."
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txt_asunto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_home" />


</androidx.constraintlayout.widget.ConstraintLayout>